--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Italian fiction -- 19th century'
+- GITenberg
 title: 'Il Re prega: Romanzo'
 url: http://www.gutenberg.org/ebooks/28888
